--- a/index.html
+++ b/index.html
@@ -49,22 +49,61 @@
                 <br>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea illo nobis reprehenderit reiciendis natus esse veniam animi dolore? Autem quibusdam nesciunt ratione reiciendis excepturi voluptate mollitia? Quia veritatis commodi molestiae?
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe eius quidem, nam veniam odit harum velit, reiciendis, corporis autem eos quisquam blanditiis. Accusamus modi deleniti voluptatum cum voluptas aliquam saepe!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea illo nobis reprehenderit reiciendis natus esse veniam animi dolore? Autem quibusdam nesciunt ratione reiciendis excepturi voluptate mollitia? Quia veritatis commodi molestiae?
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe eius quidem, nam veniam odit harum velit, reiciendis, corporis autem eos quisquam blanditiis. Accusamus modi deleniti voluptatum cum voluptas aliquam saepe!
                 </p>
-                
+                <br>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, sunt quae. Iusto quae ratione ad quia praesentium autem ex, recusandae esse earum, neque provident quod quaerat fugit enim saepe omnis!
+                </p>
             </article>
             <div class="navPost">
-
+                <div>
+                    <p>POST ANTERIOR</p>
+                </div>
+                <div>
+                    <p>SIGUIENTE POST</p>
+                </div>
             </div>
         </section>
         <aside>
-            <div class="relatedArticle"></div>
-            <div class="relatedArticle"></div>
-            <div class="relatedArticle"></div>
-            <div class="relatedArticle"></div>
-            <div class="relatedArticle"></div>
-            <div class="relatedArticle"></div>
+            <div class="relatedArticle">
+                <img style="width: 100%;" src="./IMG/1.jpg" alt="uno">
+                <h3>¿Qué lenguaje de programación aprender?</h3>
+            </div>
+            <div class="relatedArticle">
+                <img style="width: 100%;" src="./IMG/2.jpg" alt="dos">
+                <h3>La importancia de hacer tu aplicación web responsive</h3>
+            </div>
+            <div class="relatedArticle">
+                <img style="width: 100%;" src="./IMG/3.jpg" alt="tres">
+                <h3>Aprende a utilizar ChatGTP al máximo</h3>
+            </div>
+            <div class="relatedArticle">
+                <img style="width: 100%;" src="./IMG/5.jpg" alt="cuatro">
+                <h3>¿Cómo hacer un E-ecommerce?</h3>
+            </div>
+            <div class="relatedArticle">
+                <img style="width: 100%;" src="./IMG/6.jpg" alt="seis">
+                <h3>Lo mejor del trabajo en equipo</h3>
+            </div>
+            <div class="relatedArticle">
+                <img style="width: 100%;" src="./IMG/7.jpg" alt="siete">
+                <h3>Social Media</h3>
+            </div>
         </aside>
     </section>
-    <section id="footer"></section>
+    <section id="footer">
+        <footer>
+            <section class="logo">
+                <img width="170px" src="./IMG/logogris.png" alt="grus">
+            </section>
+            <section class="contact">
+                <p>Blog ©️ 2023. Derechos Reservados</p>
+                <p>blog@web.com</p>
+            </section>
+        </footer>
+    </section>
 </body>
 </html>
