--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Crea paginas increibles con HTML y CSS</title>
     <link rel="shortcut icon" href="./IMG/blog.png">
     <link rel="stylesheet" href="./CSS/style.css">
@@ -11,10 +11,10 @@
     <section id="nav">
         <nav>
             <ul>
-                <li>Tecnología</li>
-                <li>Ciencia</li>
-                <li>Educación</li>
-                <div class="send-right">
+                <li class="menu">Tecnología</li>
+                <li class="menu">Ciencia</li>
+                <li class="menu">Educación</li>
+                <div class="send-right logo">
                     <img style="width: 170px; " src="./IMG/blog1.png" alt="logo">
                 </div>
             </ul> 
@@ -50,13 +50,6 @@
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea illo nobis reprehenderit reiciendis natus esse veniam animi dolore? Autem quibusdam nesciunt ratione reiciendis excepturi voluptate mollitia? Quia veritatis commodi molestiae?
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe eius quidem, nam veniam odit harum velit, reiciendis, corporis autem eos quisquam blanditiis. Accusamus modi deleniti voluptatum cum voluptas aliquam saepe!
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea illo nobis reprehenderit reiciendis natus esse veniam animi dolore? Autem quibusdam nesciunt ratione reiciendis excepturi voluptate mollitia? Quia veritatis commodi molestiae?
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe eius quidem, nam veniam odit harum velit, reiciendis, corporis autem eos quisquam blanditiis. Accusamus modi deleniti voluptatum cum voluptas aliquam saepe!
-                </p>
-                <br>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, sunt quae. Iusto quae ratione ad quia praesentium autem ex, recusandae esse earum, neque provident quod quaerat fugit enim saepe omnis!
-                </p>
             </article>
             <div class="navPost">
                 <div>
